// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redo_undo: header->setting->scene test skybox test remove skybox->cubemap texture test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-settingScene-modal"
>
  <div
    className="modal-item"
  >
    <div
      className="modal-item-header"
    >
      SettingSceneModal
      <img
        onClick={[Function]}
        src="./public/img/close.png"
      />
    </div>
    <div
      className="modal-item-content"
    >
      <div
        className="setting-scene-ambient"
      >
        <div
          className="content-field"
        >
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="set ambient color which is global."
            >
              AmbientColor
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#000000",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
      <div
        className="setting-scene-skybox"
      >
        <article
          className="selectAssetNode-item"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="img"
              onClick={[Function]}
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <div
                className="img-dragBg"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              />
            </div>
            <button
              className="remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </article>
      </div>
    </div>
  </div>
</article>
`;

exports[`redo_undo: header->setting->scene test skybox test remove skybox->cubemap texture test undo operate test not undo 1`] = `
<article
  className="wonder-settingScene-modal"
>
  <div
    className="modal-item"
  >
    <div
      className="modal-item-header"
    >
      SettingSceneModal
      <img
        onClick={[Function]}
        src="./public/img/close.png"
      />
    </div>
    <div
      className="modal-item-content"
    >
      <div
        className="setting-scene-ambient"
      >
        <div
          className="content-field"
        >
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="set ambient color which is global."
            >
              AmbientColor
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#000000",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
      <div
        className="setting-scene-skybox"
      >
        <article
          className="selectAssetNode-item"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="img"
              onClick={[Function]}
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <div
                className="img-dragBg"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              />
            </div>
            <button
              className="remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </article>
      </div>
    </div>
  </div>
</article>
`;

exports[`redo_undo: header->setting->scene test skybox test remove skybox->cubemap texture test undo operate test undo one step undo step which from first to zero 1`] = `
<article
  className="wonder-settingScene-modal"
>
  <div
    className="modal-item"
  >
    <div
      className="modal-item-header"
    >
      SettingSceneModal
      <img
        onClick={[Function]}
        src="./public/img/close.png"
      />
    </div>
    <div
      className="modal-item-content"
    >
      <div
        className="setting-scene-ambient"
      >
        <div
          className="content-field"
        >
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="set ambient color which is global."
            >
              AmbientColor
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#000000",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
      <div
        className="setting-scene-skybox"
      >
        <article
          className="selectAssetNode-item"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="img"
              onClick={[Function]}
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <div
                className="img-dragBg"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              />
              <img
                src="./public/img/cubemap.png"
              />
            </div>
            <span>
              cubemap1
            </span>
            <button
              className="remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </article>
      </div>
    </div>
  </div>
</article>
`;

exports[`redo_undo: header->setting->scene test skybox test set skybox->cubemap texture test redo operate test redo one step undo step which from first to zero, redo step which from zero to first 1`] = `
<article
  className="wonder-settingScene-modal"
>
  <div
    className="modal-item"
  >
    <div
      className="modal-item-header"
    >
      SettingSceneModal
      <img
        onClick={[Function]}
        src="./public/img/close.png"
      />
    </div>
    <div
      className="modal-item-content"
    >
      <div
        className="setting-scene-ambient"
      >
        <div
          className="content-field"
        >
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="set ambient color which is global."
            >
              AmbientColor
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#000000",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
      <div
        className="setting-scene-skybox"
      >
        <article
          className="selectAssetNode-item"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="img"
              onClick={[Function]}
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <div
                className="img-dragBg"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              />
              <img
                src="./public/img/cubemap.png"
              />
            </div>
            <span>
              cubemap1
            </span>
            <button
              className="remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </article>
      </div>
    </div>
  </div>
</article>
`;

exports[`redo_undo: header->setting->scene test skybox test set skybox->cubemap texture test undo operate test not undo 1`] = `
<article
  className="wonder-settingScene-modal"
>
  <div
    className="modal-item"
  >
    <div
      className="modal-item-header"
    >
      SettingSceneModal
      <img
        onClick={[Function]}
        src="./public/img/close.png"
      />
    </div>
    <div
      className="modal-item-content"
    >
      <div
        className="setting-scene-ambient"
      >
        <div
          className="content-field"
        >
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="set ambient color which is global."
            >
              AmbientColor
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#000000",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
      <div
        className="setting-scene-skybox"
      >
        <article
          className="selectAssetNode-item"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="img"
              onClick={[Function]}
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <div
                className="img-dragBg"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              />
              <img
                src="./public/img/cubemap.png"
              />
            </div>
            <span>
              cubemap1
            </span>
            <button
              className="remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </article>
      </div>
    </div>
  </div>
</article>
`;

exports[`redo_undo: header->setting->scene test skybox test set skybox->cubemap texture test undo operate test undo one step undo step which from first to zero 1`] = `
<article
  className="wonder-settingScene-modal"
>
  <div
    className="modal-item"
  >
    <div
      className="modal-item-header"
    >
      SettingSceneModal
      <img
        onClick={[Function]}
        src="./public/img/close.png"
      />
    </div>
    <div
      className="modal-item-content"
    >
      <div
        className="setting-scene-ambient"
      >
        <div
          className="content-field"
        >
          <article
            className="color-pick"
          >
            <div
              className="item-header"
              title="set ambient color which is global."
            >
              AmbientColor
            </div>
            <div
              className="item-content item-color"
            >
              <div
                className="color-hex"
                onClick={[Function]}
                style={
                  Object {
                    "background": "#000000",
                  }
                }
              />
              <div
                className="color-select"
                onClick={[Function]}
              >
                <img
                  src="./public/img/color.png"
                />
              </div>
            </div>
          </article>
        </div>
      </div>
      <div
        className="setting-scene-skybox"
      >
        <article
          className="selectAssetNode-item"
        >
          <div
            className="item-header"
            title="set scene skybox->cubemap"
          >
            Skybox Cubemap
          </div>
          <div
            className="item-content"
          >
            <div
              className="img"
              onClick={[Function]}
              style={
                Object {
                  "opacity": "1",
                }
              }
            >
              <div
                className="img-dragBg"
                onDragEnter={[Function]}
                onDragLeave={[Function]}
                onDragOver={[Function]}
                onDrop={[Function]}
              />
            </div>
            <button
              className="remove"
              onClick={[Function]}
            >
              Remove
            </button>
          </div>
        </article>
      </div>
    </div>
  </div>
</article>
`;
